--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   tag:
@@ -14,10 +14,13 @@ jobs:
     runs-on: [ ubuntu-latest ]
     if: ${{ github.event.repository.fork == false }}
 
+    permissions:
+      contents: write
+
     steps:
 
     - name: Update tags
-      uses: actions/github-script@v6
+      uses: actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410 # v6.4.1
       with:
         script: |
           const version = "${{ github.ref_name }}".split('.')[0];
