--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,10 @@ inputs:
     description: 'The optional GitHub repository to generate the pull request against.'
     required: false
     default: ${{ github.repository }}
+  repo-path:
+    description: 'The optional path of the repository to check for updates.'
+    required: false
+    default: ${{ github.workspace }}
   user-email:
     description: 'The optional email address to use for Git commits.'
     required: false
