--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,8 @@ inputs:
 outputs:
   assets-updated:
     description: 'Whether the any static assets were updated by the action.'
+  pulls:
+    description: 'A JSON array of the numbers of any pull requests that opened to update static assets.'
 runs:
   using: 'node16'
   main: 'dist/index.js'
