--- a/action.yml
+++ b/action.yml
@@ -47,8 +47,10 @@ inputs:
 outputs:
   assets-updated:
     description: 'Whether the any static assets were updated by the action.'
-  pulls:
+  pulls-opened:
     description: 'A JSON array of the numbers of any pull requests that opened to update static assets.'
+  pulls-closed:
+    description: 'A JSON array of the numbers of any pull requests that were closed as superseded.'
 runs:
   using: 'node16'
   main: 'dist/index.js'
