--- a/action.yml
+++ b/action.yml
@@ -50,11 +50,11 @@ inputs:
     default: false
 outputs:
   assets-updated:
-    description: 'Whether the any static assets were updated by the action.'
-  pulls-opened:
-    description: 'A JSON array of the numbers of any pull requests that opened to update static assets.'
+    description: 'Whether any static assets were updated by the action.'
   pulls-closed:
     description: 'A JSON array of the numbers of any pull requests that were closed as superseded.'
+  pulls-opened:
+    description: 'A JSON array of the numbers of any pull requests that were opened to update static assets.'
 runs:
   using: 'node16'
   main: 'dist/index.js'
