--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,10 @@ inputs:
     description: 'The optional Git branch name prefix to use.'
     required: false
     default: ''
+  close-superseded:
+    description: 'If true, any existing pull requests superseded by any pull requests opened by the action are closed.'
+    required: false
+    default: true
   commit-message:
     description: 'The optional Git commit message to use.'
     required: false
@@ -28,6 +32,10 @@ inputs:
     description: 'The optional GitHub repository to generate the pull request against.'
     required: false
     default: ${{ github.repository }}
+  repo-path:
+    description: 'The optional path of the repository to check for updates.'
+    required: false
+    default: ${{ github.workspace }}
   user-email:
     description: 'The optional email address to use for Git commits.'
     required: false
@@ -40,6 +48,13 @@ inputs:
     description: 'If true, the action will not push changes to GitHub.'
     required: false
     default: false
+outputs:
+  assets-updated:
+    description: 'Whether any static assets were updated by the action.'
+  pulls-closed:
+    description: 'A JSON array of the numbers of any pull requests that were closed as superseded.'
+  pulls-opened:
+    description: 'A JSON array of the numbers of any pull requests that were opened to update static assets.'
 runs:
   using: 'node16'
   main: 'dist/index.js'
