--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "update-static-assets",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "private": true,
   "description": "A GitHub Action that updates HTML static assets.",
   "main": "lib/main.js",
@@ -74,6 +74,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.3",
+    "nock": "^13.3.3",
     "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
