--- a/package.json
+++ b/package.json
@@ -152,6 +152,11 @@
       "node": true
     }
   },
+  "eslintIgnore": [
+    "dist/",
+    "lib/",
+    "node_modules/"
+  ],
   "prettier": {
     "arrowParens": "always",
     "bracketSpacing": true,
