--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -12,7 +12,7 @@ jobs:
   tag:
     name: tag
     runs-on: [ ubuntu-latest ]
-    if: ${{ github.event.repository.fork == false }}
+    if: github.event.repository.fork == false
 
     permissions:
       contents: write
