--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -47,6 +47,10 @@ jobs:
       uses: github/codeql-action/init@cdcdbb579706841c47f7063dda365e292e5cad7a # v2.13.4
       with:
         languages: 'javascript'
+        config: |
+          name: 'update-static-assets CodeQL configuration'
+          paths-ignore:
+            - 'dist'
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@cdcdbb579706841c47f7063dda365e292e5cad7a # v2.13.4
