--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.0",
-    "@actions/http-client": "2.2.0",
     "@actions/io": "^1.1.3",
     "glob": "^10.3.10",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "undici": "^5.26.3"
   },
   "devDependencies": {
     "@octokit/types": "^12.0.0",
@@ -74,7 +74,6 @@
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
-    "nock": "^13.3.4",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
