Use esbuild instead of ncc
Use esbuild instead of ncc as undici and ncc have incompatibilities.

--- a/action.yml
+++ b/action.yml
@@ -57,4 +57,4 @@ outputs:
     description: 'A JSON array of the numbers of any pull requests that were opened to update static assets.'
 runs:
   using: 'node20'
-  main: 'dist/index.js'
+  main: 'dist/main.js'
