--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,10 @@ jobs:
               owner,
               repo,
               release_id,
-              draft,
+              tag_name,
+              name,
               body,
+              draft,
             });
 
             core.notice(`Created release ${updated.name}: ${updated.html_url}`);
