--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
     "undici": "^6.19.5"
   },
   "devDependencies": {
+    "@octokit/plugin-paginate-rest": "^11.3.3",
     "@octokit/plugin-rest-endpoint-methods": "^11.0.1",
     "@octokit/types": "^13.5.0",
+    "@stylistic/eslint-plugin": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "esbuild": "^0.23.0",
@@ -84,6 +86,7 @@
   "eslintConfig": {
     "plugins": [
       "jest",
+      "@stylistic",
       "@typescript-eslint"
     ],
     "extends": [
@@ -104,7 +107,15 @@
       "no-shadow": "off",
       "no-unused-vars": "off",
       "semi": "off",
-      "@typescript-eslint/no-unused-vars": "error",
+      "@stylistic/func-call-spacing": [
+        "error",
+        "never"
+      ],
+      "@stylistic/semi": [
+        "error",
+        "always"
+      ],
+      "@stylistic/type-annotation-spacing": "error",
       "@typescript-eslint/no-require-imports": "error",
       "@typescript-eslint/array-type": "error",
       "@typescript-eslint/await-thenable": "error",
@@ -115,10 +126,6 @@
         {
           "allowExpressions": true
         }
-      ],
-      "@typescript-eslint/func-call-spacing": [
-        "error",
-        "never"
       ],
       "@typescript-eslint/no-array-constructor": "error",
       "@typescript-eslint/no-empty-interface": "error",
@@ -140,11 +147,6 @@
       "@typescript-eslint/promise-function-async": "error",
       "@typescript-eslint/require-array-sort-compare": "error",
       "@typescript-eslint/restrict-plus-operands": "error",
-      "@typescript-eslint/semi": [
-        "error",
-        "always"
-      ],
-      "@typescript-eslint/type-annotation-spacing": "error",
       "@typescript-eslint/unbound-method": "error"
     },
     "env": {
