--- a/package.json
+++ b/package.json
@@ -61,13 +61,14 @@
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.0",
     "@actions/io": "^1.1.3",
-    "glob": "^11.0.0",
-    "jsdom": "^24.1.1",
-    "undici": "^6.19.5"
-  },
-  "devDependencies": {
     "@octokit/plugin-paginate-rest": "^11.3.3",
     "@octokit/plugin-rest-endpoint-methods": "^11.0.1",
+    "glob": "^11.0.0",
+    "jsdom": "^24.1.1",
+    "undici": "^6.19.5",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
     "@octokit/types": "^13.5.0",
     "@stylistic/eslint-plugin": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -80,8 +81,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.4",
-    "typescript": "^5.5.4",
-    "uuid": "^10.0.0"
+    "typescript": "^5.5.4"
   },
   "eslintConfig": {
     "plugins": [
