--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@octokit/plugin-rest-endpoint-methods": "^11.0.1",
     "glob": "^11.0.0",
     "jsdom": "^25.0.0",
+    "lru-cache": "^11.0.1",
     "undici": "^6.19.8",
     "uuid": "^10.0.0"
   },
