--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
       "i18n-text/no-en": "off",
       "eslint-comments/no-use": "off",
       "filenames/match-regex": "off",
+      "github/filenames-match-regex": "off",
       "import/no-namespace": "off",
       "no-shadow": "off",
       "no-unused-vars": "off",
