Update eslint packages together
Update eslint npm packages together.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,10 @@ updates:
 - package-ecosystem: "npm"
   directory: "/"
   groups:
+    eslint:
+      patterns:
+        - "@eslint/*"
+        - "eslint"
     typescript-eslint:
       patterns:
         - "@typescript-eslint/*"
