--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,9 @@ on:
 
 env:
   FORCE_COLOR: 1
+  # renovate: datasource=github-releases depName=powershell-yaml packageName=cloudbase/powershell-yaml
   POWERSHELL_YAML_VERSION: '0.4.12'
+  # renovate: datasource=github-releases depName=PSScriptAnalyzer packageName=PowerShell/PSScriptAnalyzer
   PSSCRIPTANALYZER_VERSION: '1.24.0'
 
 permissions:
