--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -21,9 +21,11 @@ jobs:
 
     - name: Update tags
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+      env:
+        BRANCH_NAME: ${{ github.ref_name }}
       with:
         script: |
-          const version = "${{ github.ref_name }}".split('.')[0];
+          const version = process.env.BRANCH_NAME.split('.')[0];
           let floating = null;
           try {
             floating = await github.rest.git.getRef({
