Change npm command from publish to package
Resolves https://github.com/martincostello/update-static-assets/security/code-scanning/80.

--- a/.github/workflows/regenerate-dist.yml
+++ b/.github/workflows/regenerate-dist.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm audit fix
 
       - name: Regenerate dist
-        run: npm run publish
+        run: npm run package
 
       - name: Push changes to GitHub
         id: push-changes
