Fix build scripts
Refactor to fix breakage from #1171.

--- a/.github/workflows/regenerate-dist.yml
+++ b/.github/workflows/regenerate-dist.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm audit fix
 
       - name: Regenerate dist
-        run: npm run package
+        run: npm run generate
 
       - name: Push changes to GitHub
         id: push-changes
