--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm ci
 
       - name: Rebuild the dist directory
-        run: npm run check-dist
+        run: npm run generate
 
       - name: Compare the expected and actual dist directories
         id: diff
